# k-cube

./: .gitignore  HOW_TO_RUN.md  README.md  pyproject.toml  start_client.py  test_k_cube.py
k-cube-daemon/: app.py  config_manager.py  requirements.txt  tray_icon.py
k-cube-daemon/core/: watcher.py  worker.py
k-cube-daemon/ui/: login_window.py  main_window.py  theme.py
k-cube-daemon/ui/components/: custom_dialogs.py  flow_layout.py  styled_button.py  styled_line_edit.py  title_bar.py  toast.py  vault_card.py  vault_list_item.py
k-cube-daemon/ui/resources/: styles.qss
k-cube-server/: .env  Dockerfile  SERVER_DEPLOYMENT.md  addUser.py  config.py  docker-compose.yml  entrypoint.sh  requirements.txt  setup.py  wsgi.py
k-cube-server/app/: __init__.py  models.py
k-cube-server/app/api/: auth.py  sync.py  vault.py
k-cube-server/migrations/versions/: 4eabc8697903_initial_database_schema.py
k_cube/: README.md  cli.py  client.py  config.py  database.py  repository.py  sync.py  utils.py
